# Distributed-In-Memory-Key-Value-Store

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.json
bench/: benchmark.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  benchmarks.md  persistence.md  protocol.md  replication.md
include/net/: Connection.h
include/protocol/: RESP.h
include/server/: CommandDispatcher.h  Metrics.h  Server.h
include/storage/: AOFLogger.h  DictEntry.h  StorageEngine.h
include/util/: Logger.h
src/: main.cpp
src/net/: Connection.cpp
src/protocol/: RESP.cpp
src/server/: CommandDispatcher.cpp  Metrics.cpp  Server.cpp
src/storage/: AOFLogger.cpp  StorageEngine.cpp
src/util/: Logger.cpp
tests/: run_tests.py
tests/integration/: test_crud.py  test_eviction.py  test_observability.py  test_persistence.py  test_replication.py  test_smoke.py  test_ttl.py
tools/: client.py
